# Geometry_Aware_Surrogate_Modelling_for_Stress_prediction_on_jet_engine_brackets

./: README.md  config_patch.py  main.py  pyproject.toml  requirements.txt  run_demo.py
checkpoints/: test_indices.txt
configs/: config.yaml
data/processed/: 00000_meta.npy  00000_pc.npy  00000_y.npy  00001_meta.npy  00001_pc.npy  00001_y.npy  00002_meta.npy  00002_pc.npy  00002_y.npy  00003_meta.npy  00003_pc.npy  00003_y.npy  00004_meta.npy  00004_pc.npy  00004_y.npy  00005_meta.npy  00005_pc.npy  00005_y.npy  00006_meta.npy  00006_pc.npy  00006_y.npy  00007_meta.npy  00007_pc.npy  00007_y.npy  00008_meta.npy  00008_pc.npy  00008_y.npy  00009_meta.npy  00009_pc.npy  00009_y.npy  00010_meta.npy  00010_pc.npy  00010_y.npy  00011_meta.npy  00011_pc.npy  00011_y.npy  00012_meta.npy  00012_pc.npy  00012_y.npy  00013_meta.npy  (+18899 more)
data/results/: eval_report.json
logs/: history.json
scripts/: evaluate.py  predict.py  prepare_dataset.py  train.py  train_tabular.py
src/data/: dataset.py  deepjeb_loader.py  npz_streaming_loader.py
src/data_tabular/: csv_loader.py  stress_mlp.py
src/evaluation/: metrics.py  validate.py  visualize.py
src/models/: pointnet_plus.py  tnet.py
src/training/: losses.py  trainer.py
tests/: test_pipeline.py
